refatora para rodar em jdk 8+